# Stack

./: .travis.yml  CMakeLists.txt  README.md
include/: stack.cpp
sources/: CMakeLists.txt
tests/: CMakeLists  CMakeLists.txt  init.cpp
tests/cmake/: FindCPM.cmake
tests/source/: init.cpp
tools/: build.sh  build.sh.txt  clean.sh  clean.sh.txt  test.sh  test.sh.txt
